docs-archive/apache-airflow-providers-databricks/7.22.0/_sources/_api/airflow/providers/databricks/operators/databricks_workflow/index.rst.txt
airflow.providers.databricks.operators.databricks_workflow
==========================================================

.. py:module:: airflow.providers.databricks.operators.databricks_workflow


Classes
-------

.. autoapisummary::

   airflow.providers.databricks.operators.databricks_workflow.WorkflowRunMetadata
   airflow.providers.databricks.operators.databricks_workflow.DatabricksWorkflowTaskGroup


Module Contents
---------------

.. py:class:: WorkflowRunMetadata

   Metadata for a Databricks workflow run.

   :param run_id: The ID of the Databricks workflow run.
   :param job_id: The ID of the Databricks workflow job.
   :param conn_id: The connection ID used to connect to Databricks.


   .. py:attribute:: conn_id
      :type:  str


   .. py:attribute:: job_id
      :type:  int


   .. py:attribute:: run_id
      :type:  int


.. py:class:: DatabricksWorkflowTaskGroup(databricks_conn_id, access_control_list = None, existing_clusters = None, extra_job_params = None, jar_params = None, job_clusters = None, max_concurrent_runs = 1, notebook_packages = None, notebook_params = None, python_params = None, spark_submit_params = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.TaskGroup`


   A task group that takes a list of tasks and creates a databricks workflow.

   The DatabricksWorkflowTaskGroup takes a list of tasks and creates a databricks workflow
   based on the metadata produced by those tasks. For a task to be eligible for this
   TaskGroup, it must contain the ``_convert_to_databricks_workflow_task`` method. If any tasks
   do not contain this method then the Taskgroup will raise an error at parse time.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:DatabricksWorkflowTaskGroup`

   :param databricks_conn_id: The name of the databricks connection to use.
   :param existing_clusters: A list of existing clusters to use for this workflow.
   :param access_control_list: List of permissions to set on the job. Array of object
       (AccessControlRequestForUser) or object (AccessControlRequestForGroup) or object
       (AccessControlRequestForServicePrincipal).

       .. seealso::
           When provided, this is applied when the job is created and when an existing job is
           reset. Setting this replaces any existing job permissions, unless its value is
           an empty list. If access_control_list == [], the prior ACL remains in place.
   :param extra_job_params: A dictionary containing properties which will override the default
       Databricks Workflow Job definitions.
   :param jar_params: A list of jar parameters to pass to the workflow. These parameters will be passed to all jar
       tasks in the workflow.
   :param job_clusters: A list of job clusters to use for this workflow.
   :param max_concurrent_runs: The maximum number of concurrent runs for this workflow.
   :param notebook_packages: A list of dictionary of Python packages to be installed. Packages defined
       at the workflow task group level are installed for each of the notebook tasks under it. And
       packages defined at the notebook task level are installed specific for the notebook task.
   :param notebook_params: A dictionary of notebook parameters to pass to the workflow. These parameters
       will be passed to all notebook tasks in the workflow.
   :param python_params: A list of python parameters to pass to the workflow. These parameters will be passed to
       all python tasks in the workflow.
   :param spark_submit_params: A list of spark submit parameters to pass to the workflow. These parameters
       will be passed to all spark submit tasks.


   .. py:attribute:: is_databricks
      :value: True



   .. py:attribute:: databricks_conn_id


   .. py:attribute:: access_control_list
      :value: None



   .. py:attribute:: existing_clusters
      :value: []



   .. py:attribute:: extra_job_params


   .. py:attribute:: jar_params
      :value: []



   .. py:attribute:: job_clusters
      :value: []



   .. py:attribute:: max_concurrent_runs
      :value: 1



   .. py:attribute:: notebook_packages
      :value: []



   .. py:attribute:: notebook_params


   .. py:attribute:: python_params
      :value: []



   .. py:attribute:: spark_submit_params
      :value: []



   .. py:method:: __exit__(_type, _value, _tb)

      Exit the context manager and add tasks to a single ``_CreateDatabricksWorkflowOperator``.



